--- a/api-itm/App.config
+++ b/api-itm/App.config
@@ -10,6 +10,12 @@
             <setting name="SavedUsername" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SavedCredentialsUser" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SavedCredentialsPassword" serializeAs="String">
+                <value />
+            </setting>
         </api_itm.Properties.Settings>
     </userSettings>
 </configuration>
