--- a/api-itm/api-itm.csproj
+++ b/api-itm/api-itm.csproj
@@ -39,4 +39,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Contracts\SuspendariEnvelope\" />
+  </ItemGroup>
+
 </Project>
