--- a/api-itm/App.config
+++ b/api-itm/App.config
@@ -1,21 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="api_itm.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <api_itm.Properties.Settings>
-            <setting name="SavedUsername" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SavedCredentialsUser" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SavedCredentialsPassword" serializeAs="String">
-                <value />
-            </setting>
-        </api_itm.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="api_itm.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+
+  <!-- NEW: Updater configuration -->
+  <appSettings>
+    <!-- BUMP THIS when you release -->
+    <add key="LatestVersion" value="1.0.0.14"/>
+    <!--   installer URL  -->
+    <add key="InstallerUrl" value="http://info.ubbcluj.ro/~ion/magazin/kituri/api-itm/api-itm.exe" />
+    <add key="UpdateUsername" value="" />
+    <add key="UpdatePassword" value="" />
+    <add key="UpdateTestMode" value="false" />
+    <!-- Pretend the app is this version (lower than LatestVersion) -->
+    <add key="OverrideCurrentVersion" value="" />
+
+  </appSettings>
+
+
+  <userSettings>
+    <api_itm.Properties.Settings>
+      <setting name="SavedUsername" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SavedCredentialsUser" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SavedCredentialsPassword" serializeAs="String">
+        <value />
+      </setting>
+    </api_itm.Properties.Settings>
+  </userSettings>
 </configuration>
